@@ -375,27 +375,6 @@ public abstract class BaseTmxMapLoader<P extends BaseTiledMapLoader.Parameters> 
 				} else if ((child = element.getChildByName("point")) != null) {
 					object = new PointMapObject(x, flipY ? y - height : y);
 				} else if ((child = element.getChildByName("text")) != null) {
-					 TextMapObject textMapObject = new TextMapObject(x, flipY ? y - height : y, width, height, child.getText());
-					 textMapObject.setRotation(child.getFloatAttribute("rotation", 0));
-					 textMapObject.setFontFamily(child.getAttribute("fontfamily",""));
-					 textMapObject.setPixelSize(child.getInt("pixelSize",16));
-					 textMapObject.setHorizontalAlign(child.getAttribute("halign","left"));
-					 textMapObject.setVerticalAlign(child.getAttribute("valign","top"));
-					 textMapObject.setBold(child.getIntAttribute("bold",0) == 1);
-					 textMapObject.setItalic(child.getIntAttribute("italic",0) == 1);
-					 textMapObject.setUnderline(child.getIntAttribute("underline",0) == 1);
-					 textMapObject.setStrikeout(child.getIntAttribute("strikeout",0) == 1);
-					 textMapObject.setWrap(child.getIntAttribute("wrap",0) == 1);
-					 //When kerning is true, it won't be added as an attribute
-					 textMapObject.setKerning(child.getIntAttribute("kerning",1) == 1);
-					 //Default color is #000000, not added as attribute
-					 String textColor = child.getAttribute("color", "#000000");
-					 //TODO:After PR #7076 is Merged. Update below section of code to use tiledColorToLibGDXColor().
-					 String alpha = textColor.length() == 9 ? textColor.substring(1,3) : "ff";
-					 String color= textColor.length() == 9 ? textColor.substring(3) : textColor.substring(1);
-					 textMapObject.setColor(Color.valueOf(color + alpha));
-					 object = textMapObject;
-				} else if ((child = element.getChildByName("text")) != null) {
 					TextMapObject textMapObject = new TextMapObject(x, flipY ? y - height : y, width, height, child.getText());
 					textMapObject.setRotation(child.getFloatAttribute("rotation", 0));
 					textMapObject.setFontFamily(child.getAttribute("fontfamily", ""));
